# ChessImac

./: .clang-format  CMakeLists.txt
assets/models/: bishop_body.mtl  king_body.mtl  knight_body.mtl  pawn.mtl  pawn_body.mtl  queen_body.mtl  rook_body.mtl
assets/shaders/: 3D.vs.glsl  colorTex3D.fs.glsl  multiTex3D.fs.glsl  normals.fs.glsl  skybox.vs.glsl  tex3D.fs.glsl
lib/glimac/: CMakeLists.txt
lib/glimac/src/: Camera.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  FilePath.hpp  FreeflyCamera.cpp  FreeflyCamera.hpp  Geometry.cpp  Geometry.hpp  OBJModel.cpp  OBJModel.hpp  Skybox.cpp  Skybox.hpp  TrackballCamera.cpp  TrackballCamera.hpp  common.hpp
src/: Chessboard.cpp  Chessboard.hpp  GameManager.cpp  GameManager.hpp  Moves.cpp  Moves.hpp  Pieces.cpp  Pieces.hpp  Probability.cpp  Probability.hpp  Renderer.cpp  Renderer.hpp  main.cpp
src/Probabilities/: Bernoulli.cpp  Bernoulli.hpp  Chess960Permutation.cpp  Chess960Permutation.hpp  ExpoLaw.cpp  ExpoLaw.hpp  FishLaw.cpp  FishLaw.hpp  Uniform.cpp  Uniform.hpp  WeibullEvolution.cpp  WeibullEvolution.hpp
src/Renderers/: 2DRenderer.cpp  2DRenderer.hpp  3DRenderer.cpp  3DRenderer.hpp  Renderer.cpp  Renderer.hpp
